# rp2040-dmxsun

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigMemoryLayout.md  README.md  acminterface.h  build-webui.sh  dmahandler.h  kibot.yml  main.c  regen-fsdata.sh  stdio_usb.c  tusb_config.h  tx16.pio
.github/: dependabot.yml
.github/workflows/: codespell.yml  kibot.yml  kicad-exports.yml  pico-build.yml
.kibot/: boardview.kibot.yml  bom_ibom.kibot.yml  bom_octopart.kibot.yml  docs.kibot.yml  drills.kibot.yml  dxf.kibot.yml  fabrications.kibot.yml  gerbers.kibot.yml  gerbers_jlcpcb.kibot.yml  plot.kibot.yml  plot_jlcpcb-green-hasl.kibot.yml  plot_oshpark-afterdark.kibot.yml  plot_oshpark-purple.kibot.yml  render.kibot.yml  step.kibot.yml
gfx/: icon-dmxsun-64x64.xbm
hardware/: docs.kibot.yaml
hardware/baseboard 4slots/: baseboard 4slots-cache.lib  baseboard 4slots.kicad_pcb  baseboard 4slots.sch  fp-info-cache
hardware/baseboard_2slots/: baseboard_2slots.kicad_pcb  baseboard_2slots.kicad_prl  baseboard_2slots.kicad_pro  baseboard_2slots.kicad_sch  fp-lib-table  sym-lib-table
hardware/baseboard_4slots/: baseboard_4slots.kicad_pcb  baseboard_4slots.kicad_prl  baseboard_4slots.kicad_pro  baseboard_4slots.kicad_sch  baseboard_4slots.pro  baseboard_4slots.sch  fp-lib-table  sym-lib-table
hardware/footprints/NC3FD-H.pretty/: Jack_XLR_Neutrik_NC3FD-H_Horizontal.kicad_mod
hardware/footprints/RJ45_Sparkfun.pretty/: RJ45_Sparkfun.kicad_mod
hardware/footprints/W5500_Mini.pretty/: W5500_Mini.kicad_mod
hardware/ioboard 2ports rdm/: ioboard 2ports rdm.sch
hardware/ioboard 2ports rdm/NC3FD-H.pretty/: Jack_XLR_Neutrik_NC3FD-H_Horizontal.kicad_mod
hardware/ioboard 4ports cheap/: fp-info-cache  ioboard 4ports cheap-cache.lib  ioboard 4ports cheap.kicad_pcb  ioboard 4ports cheap.pro  ioboard 4ports cheap.sch
hardware/ioboard 4ports isolated/: fp-info-cache  ioboard 4ports isolated-cache.lib  ioboard 4ports isolated.kicad_pcb  ioboard 4ports isolated.sch
hardware/ioboard_2ports_rdm_isolated/: fp-lib-table  ioboard_2ports_rdm_isolated.kicad_pcb  ioboard_2ports_rdm_isolated.kicad_prl  ioboard_2ports_rdm_isolated.kicad_pro  ioboard_2ports_rdm_isolated.kicad_sch  ioboard_2ports_rdm_isolated.sch
hardware/ioboard_2ports_rdm_unisolated/: fp-info-cache  ioboard_2ports_unisolated-cache.lib  ioboard_2ports_unisolated.kicad_pcb  ioboard_2ports_unisolated.kicad_prl  ioboard_2ports_unisolated.kicad_pro  ioboard_2ports_unisolated.kicad_sch  ioboard_2ports_unisolated.pro  ioboard_2ports_unisolated.sch
hardware/ioboard_4ports_isolated/: fp-info-cache  ioboard_4ports_isolated-cache.lib  ioboard_4ports_isolated.kicad_pcb  ioboard_4ports_isolated.kicad_prl  ioboard_4ports_isolated.kicad_pro  ioboard_4ports_isolated.kicad_sch  ioboard_4ports_isolated.sch
hardware/ioboard_4ports_unisolated/: fp-lib-table  ioboard_4ports_unisolated-cache.lib  ioboard_4ports_unisolated.kicad_pcb  ioboard_4ports_unisolated.kicad_prl  ioboard_4ports_unisolated.kicad_pro  ioboard_4ports_unisolated.kicad_sch  ioboard_4ports_unisolated.sch
hardware/symbols/: MCU_RaspberryPi_and_Boards.kicad_sym  W5500_Mini.kicad_sym
lib/pico_cyw43_arch_nolwip/: CMakeLists.txt  cyw43_arch_freertos.c  cyw43_arch_poll.c
src/: CMakeLists.txt  acminterface.c  acminterface.h  artnet_in.cpp  artnet_in.h  boardconfig.cpp  boardconfig.h  crc_X25.c  crc_X25.h  dhcpdata.cpp  dhcpdata.h  dhcpserver.c  dhcpserver.h  dmahandler.c  dmahandler.h  dmxbuffer.cpp  dmxbuffer.h  e1_31_in.cpp  e1_31_in.h  edp.cpp  edp.h  enumFactory.h  eth_cyw43.cpp  eth_cyw43.h  fsdata.c  hidinterface.c  jaruleconstants.h  jaruleproto.c  localdmx.cpp  localdmx.h  log.cpp  log.h  lwipopts.h  main.c  main.cpp  oled_u8g2.cpp  oled_u8g2.h  picotool_binary_information.h  pins.h  statusleds.cpp  (+24 more)
src/arch/: cc.h
www/: heatshrink.js  index.html
www/config/statusLeds/brightness/: get.json
www/config/wireless/spectrum/: get.json
www/dmxBuffer/00/: get.json
www/dmxBuffer/01/: get.json
www/dmxBuffer/05/: get.json
www/dmxBuffer/15/: get.json
wwwsrc/: CMakeLists.txt  package.json  postbuild.js  postcss.config.js
wwwsrc/public/: index.html
wwwsrc/public/config/webServer/ip/: get.json
wwwsrc/public/config/wireless/: get.json
wwwsrc/public/config/wireless/stats/: get.json
wwwsrc/public/dmxBuffer/02/: get.json
wwwsrc/public/dmxBuffer/03/: get.json
wwwsrc/public/dmxBuffer/04/: get.json
wwwsrc/public/dmxBuffer/06/: get.json
wwwsrc/public/dmxBuffer/07/: get.json
wwwsrc/public/dmxBuffer/08/: get.json
wwwsrc/public/dmxBuffer/09/: get.json
wwwsrc/public/dmxBuffer/10/: get.json
wwwsrc/public/dmxBuffer/11/: get.json
wwwsrc/public/dmxBuffer/12/: get.json
wwwsrc/public/dmxBuffer/13/: get.json
wwwsrc/public/dmxBuffer/14/: get.json
wwwsrc/public/dmxBuffer/16/: get.json
wwwsrc/public/dmxBuffer/17/: get.json
wwwsrc/public/dmxBuffer/18/: get.json
wwwsrc/public/dmxBuffer/19/: get.json
wwwsrc/public/dmxBuffer/20/: get.json
wwwsrc/public/dmxBuffer/21/: get.json
wwwsrc/public/dmxBuffer/22/: get.json
wwwsrc/public/dmxBuffer/23/: get.json
wwwsrc/public/log/: get.json
wwwsrc/public/overview/: get.json
wwwsrc/public/overview/ioBoards/: get.json
wwwsrc/public/overview/statusleds/: get.json
wwwsrc/src/: App.js  BoardStatus.js  Config.js  Console.js  Home.js  Log.js  StatusLeds.js  Wireless.js  index.js
